fix: 산책로 검색 좋아요 여부 수정